# freedom-insurance

./: .gitignore  README.md  dataset_description.csv  devenv.nix  main.py  problem.md  pyproject.toml
.agents/skills/data-analyst/: SKILL.md
.agents/skills/ogpo-feature-engineer/: SKILL.md
.agents/skills/ogpo-pipeline-builder/: SKILL.md
.github/agents/: insurance-data-analyst.agent.md
columns/: model_mark.ipynb  premium.ipynb  region.ipynb
columns_analysis/: model_mark.md  premium.md  region.md
data/: EDA.ipynb  EDA.txt  data_investigation.ipynb  preprocessing_clean.ipynb  score_investigation.ipynb
features/: __init__.py  car.py  driver.py  engine.py  model_mark.py  premium.py  region.py  score.py  vehicle_type.py
memories/: catboost_severity_tuning_changes.md  frequency_auc_experiments.md  score_feature_experiments.md
pipeline/: __init__.py  config.py  contracts.py  evaluation.py  features.py  io.py  logging.py  models.py  outliers.py  pricing.py  risk_encoding.py  runner.py
reports/: 01_overview_results.md  02_data_analysis.md  03_modeling_pricing.md
scripts/: train_pipeline.py
